--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^7.1.5",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "browser-sync": "^2.18.8",
     "css-mqpacker": "^6.0.1",
     "del": "^3.0.0",
@@ -30,6 +33,9 @@
     "gulp-uglify": "^3.0.2",
     "imagemin-pngquant": "^5.0.1",
     "run-sequence": "^2.2.0",
+    "script-loader": "^0.7.2",
+    "webpack": "^4.38.0",
+    "webpack-stream": "^5.2.1",
     "yargs": "^13.3.0"
   }
 }
